Add boss loot tables and fix channeling REI error